--- a/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
+++ b/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
@@ -1,266 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.LikvidCalcFasonCast"
-    android:theme="@style/ThemeOverlay.AppCompat.LikvidCalc"
-    android:id="@+id/percent">
+    android:layout_height="match_parent">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/calcList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView"-->
-<!--        android:layout_below="@+id/percent"-->
-<!--        android:layout_toEndOf="@id/percent"-->
-<!--        android:text="@string/C"-->
-<!--        app:layout_marginLeftPercent="1%"-->
-<!--        app:layout_marginTopPercent="1%"/>-->
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
 
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText"-->
-<!--        android:layout_alignTop="@+id/textView"-->
-<!--        android:layout_toEndOf="@id/textView" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView1"-->
-<!--        android:layout_alignTop="@+id/editText"-->
-<!--        android:layout_toEndOf="@id/editText"-->
-<!--        android:text="@string/Si" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText1"-->
-<!--        android:layout_alignTop="@+id/textView1"-->
-<!--        android:layout_toEndOf="@id/textView1" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView2"-->
-<!--        android:text="@string/Mn"-->
-<!--        android:layout_alignTop="@+id/editText1"-->
-<!--        android:layout_toEndOf="@id/editText1" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText2"-->
-<!--        android:layout_alignTop="@+id/textView2"-->
-<!--        android:layout_toEndOf="@id/textView2" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView3"-->
-<!--        android:layout_below="@+id/textView"-->
-<!--        android:text="@string/P"-->
-<!--        app:layout_marginLeftPercent="1%" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText3"-->
-<!--        android:layout_alignTop="@+id/textView3"-->
-<!--        android:layout_toEndOf="@id/textView3" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView4"-->
-<!--        android:layout_alignTop="@+id/editText3"-->
-<!--        android:layout_toEndOf="@id/editText3"-->
-<!--        android:text="@string/S" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText4"-->
-<!--        android:layout_alignTop="@+id/textView4"-->
-<!--        android:layout_toEndOf="@id/textView4" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView5"-->
-<!--        android:layout_alignTop="@+id/editText4"-->
-<!--        android:layout_toEndOf="@id/editText4"-->
-<!--        android:text="@string/Cr" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText5"-->
-<!--        android:layout_alignTop="@+id/textView5"-->
-<!--        android:layout_toEndOf="@id/textView5" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView6"-->
-<!--        android:layout_below="@+id/textView3"-->
-<!--        android:text="@string/Ni"-->
-<!--        app:layout_marginLeftPercent="1%" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText6"-->
-<!--        android:layout_alignTop="@+id/textView6"-->
-<!--        android:layout_toEndOf="@id/textView6" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView7"-->
-<!--        android:text="@string/Cu"-->
-<!--        android:layout_alignTop="@+id/editText6"-->
-<!--        android:layout_toEndOf="@id/editText6" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText7"-->
-<!--        android:layout_alignTop="@+id/textView7"-->
-<!--        android:layout_toEndOf="@id/textView7" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView8"-->
-<!--        android:text="@string/Al"-->
-<!--        android:layout_alignTop="@+id/editText7"-->
-<!--        android:layout_toEndOf="@id/editText7" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText8"-->
-<!--        android:layout_alignTop="@+id/textView8"-->
-<!--        android:layout_toEndOf="@id/textView8" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView9"-->
-<!--        android:layout_below="@+id/textView6"-->
-<!--        android:text="@string/Ti"-->
-<!--        app:layout_marginLeftPercent="1%" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText9"-->
-<!--        android:layout_alignTop="@+id/textView9"-->
-<!--        android:layout_toEndOf="@id/textView9" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView10"-->
-<!--        android:layout_alignTop="@+id/editText9"-->
-<!--        android:layout_toEndOf="@id/editText9"-->
-<!--        android:text="@string/V" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText10"-->
-<!--        android:layout_alignTop="@+id/textView10"-->
-<!--        android:layout_toEndOf="@id/textView10" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView11"-->
-<!--        android:layout_alignTop="@+id/editText10"-->
-<!--        android:layout_toEndOf="@id/editText10"-->
-<!--        android:text="@string/Mo" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText11"-->
-<!--        android:layout_alignTop="@+id/textView11"-->
-<!--        android:layout_toEndOf="@id/textView11" />-->
-
-<!--    <TextView-->
-<!--        style="@style/CustomTextView"-->
-<!--        android:id="@+id/textView12"-->
-<!--        android:layout_below="@+id/textView9"-->
-<!--        android:layout_toEndOf="@id/editText9"-->
-<!--        android:text="@string/Ti" />-->
-
-<!--    <EditText-->
-<!--        style="@style/CustomEditText"-->
-<!--        android:id="@+id/editText12"-->
-<!--        android:layout_alignTop="@+id/textView12"-->
-<!--        android:layout_toEndOf="@id/textView12" />-->
-
-<!--    <Button-->
-<!--        style="@style/CustomButton"-->
-<!--        android:id="@+id/btn_Calc"-->
-<!--        android:layout_below="@+id/textView12"-->
-<!--        android:text="@string/calculate"-->
-<!--        android:textSize="18sp"-->
-<!--        app:layout_marginLeftPercent="25%"-->
-<!--        app:layout_widthPercent="50%" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/btn_Save"-->
-<!--        style="@style/ButtonIconSave"-->
-<!--        android:layout_alignTop="@+id/btn_Calc"-->
-<!--        android:layout_toEndOf="@id/btn_Calc"-->
-<!--        app:layout_marginLeftPercent="2%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView13"-->
-<!--        style="@style/CustomTextViewInTable"-->
-<!--        android:layout_below="@+id/btn_Calc"-->
-<!--        android:text="@string/likvidAnsw"-->
-<!--        app:layout_heightPercent="13%"-->
-<!--        app:layout_marginLeftPercent="2%"-->
-<!--        app:layout_widthPercent="60%"-->
-<!--        android:onClick="SaveReport"-->
-<!--        tools:ignore="OnClick" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_AnswLikvid"-->
-<!--        style="@style/CustomTextViewInTableAnswer"-->
-<!--        android:layout_alignTop="@+id/textView13"-->
-<!--        android:layout_toEndOf="@id/textView13"-->
-<!--        app:layout_heightPercent="13%"-->
-<!--        app:layout_widthPercent="36%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView14"-->
-<!--        style="@style/CustomTextViewInTable"-->
-<!--        android:layout_below="@+id/textView13"-->
-<!--        android:text="@string/tempCast"-->
-<!--        app:layout_heightPercent="13%"-->
-<!--        app:layout_marginLeftPercent="2%"-->
-<!--        app:layout_widthPercent="34%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_AnswTempCast"-->
-<!--        style="@style/CustomTextViewInTableAnswer"-->
-<!--        android:layout_alignTop="@+id/textView14"-->
-<!--        android:layout_toEndOf="@id/textView14"-->
-<!--        app:layout_heightPercent="13%"-->
-<!--        app:layout_widthPercent="31%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_AnswTempCast1"-->
-<!--        style="@style/CustomTextViewInTableAnswer"-->
-<!--        android:layout_alignTop="@+id/txt_AnswTempCast"-->
-<!--        android:layout_toEndOf="@id/txt_AnswTempCast"-->
-<!--        app:layout_heightPercent="13%"-->
-<!--        app:layout_widthPercent="31%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/textView15"-->
-<!--        style="@style/CustomTextViewInTable"-->
-<!--        android:layout_below="@+id/textView14"-->
-<!--        android:text="@string/tempInStove"-->
-<!--        app:layout_heightPercent="12%"-->
-<!--        app:layout_marginLeftPercent="2%"-->
-<!--        app:layout_widthPercent="34%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_AnswTempInStove"-->
-<!--        style="@style/CustomTextViewInTableAnswer"-->
-<!--        android:layout_alignTop="@+id/textView15"-->
-<!--        android:layout_toEndOf="@id/textView15"-->
-<!--        app:layout_heightPercent="12%"-->
-<!--        app:layout_widthPercent="31%" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/txt_AnswTempInStove1"-->
-<!--        style="@style/CustomTextViewInTableAnswer"-->
-<!--        android:layout_alignTop="@+id/txt_AnswTempInStove"-->
-<!--        android:layout_toEndOf="@id/txt_AnswTempInStove"-->
-<!--        app:layout_heightPercent="12%"-->
-<!--        app:layout_widthPercent="31%" />-->
-</androidx.percentlayout.widget.PercentRelativeLayout>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
